Fix excess padding on mobile

--- a/index.css
+++ b/index.css
@@ -64,7 +64,7 @@
     transform: rotate(180deg);
     text-transform: uppercase;
     text-align: center;
-    line-height: 80px;
+    line-height: 110px;
     font-size: 20px;
     letter-spacing: 3px;
     color: white;
